<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gitudy</string>

    <!-- Strings related to common -->
    <string name="network_error">네트워크 연결을 확인해주세요</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장하기</string>
    <string name="post">등록</string>
    <string name="input">입력하기</string>
    <string name="next">다음</string>
    <string name="text_length">%d/%d</string>
    <string name="text_length_alert">%d자 이내</string>
    <string name="copy">복사</string>
    <string name="comment_hint">%s님에게 응원과 격려의 메시지를 남겨주세요!</string>
    <string name="commit_title">[FE] feat(#72): 커밋 상세 페이지 UI 구현</string>
    <string name="version">1.0.0</string>
    <string name="setting_later">추후 구현 예정입니다</string>
    <string name="copy_succeed">클립보드에 복사되었습니다</string>


    <!-- Strings related to alert -->
    <string name="alert_text_length">%d자 이하로 입력해주세요.</string>
    <string name="alert_text_emoji">특수기호 및 이모티콘 입력은 불가해요.</string>
    <string name="alert_id_ok">연동 가능한 아이디입니다</string>
    <string name="alert_id_not_ok">존재하지 않는 아이디입니다</string>
    <string name="alert_name_ok">사용 가능한 닉네임입니다</string>
    <string name="alert_name_not_ok">이미 존재하는 닉네임입니다</string>
    <string name="alert_wrong_login_info">아이디 또는 비밀번호가 잘못되었습니다</string>
    <string name="alert_repo_name_not_ok">깃허브 레포지토리 이름 형식을 지켜주세요</string>
    <string name="alert_study_apply_is_not_ok">스터디 신청에 실패했어요! 잠시 후 다시 시도해주세요</string>
    <string name="alert_study_apply_already_done">이미 가입한 스터디입니다</string>


    <!-- Strings related to home -->
    <string name="home_my_rank">활동점수 %d점  |  랭킹 %d위</string>
    <string name="home_recommend">새로운 스터디를\n시작해보세요</string>
    <string name="notice_alert_info">%s • %s</string>
    <string name="notice_no_alert">새로운 알림이 없어요</string>
    <string name="notice_no_study_apply_member">새로운 가입 신청자가 없어요</string>


    <!-- Strings related to study -->
    <string name="study_my_cnt">마이스터디</string>
    <string name="study_name">단국알고깃터디</string>
    <string name="study_no_my_study">가입 중인 스터디가 없어요</string>
    <string name="study_commit_rule">주 1회 커밋 필수</string>
    <string name="study_todo_check_num">%d/%d</string>
    <string name="study_lock">스터디 비공개</string>
    <string name="study_unlock">스터디 공개</string>
    <string name="study_deleted">스터디 삭제</string>
    <string name="study_inactive">스터디 종료</string>
    <string name="study_team_rank">%d점 • %d등</string>
    <string name="study_member_score">기여도 %d</string>
    <string name="study_team_rank_full">랭킹 %d등 • 최근활동 %s</string>
    <string name="study_github_link">https://github.com/%s/%s</string>
    <string name="study_noti">2월까지 프로젝트 마무리!</string>
    <string name="study_to_do">백준의 1253번 문제 풀기</string>
    <string name="study_to_do_info">스터디 레포지토리에 있는 To-Do 폴더에 커밋하면\n커밋이 앱에 자동으로 등록돼요!</string>
    <string name="study_to_do_body">본문내용이 그렇게 많으려나?? 글자 수 제한해서 2줄 이상 안넘게 막으면 접고 펼치는거 없앨 수 있어. 그럼 더 간결해보이긴 해</string>
    <string name="to_do_deadline">마감일 </string>
    <string name="to_do_deadline_date">%d.%d.%d</string>
    <string name="to_do_add">새로운 TO-DO를\n추가하시겠습니까?</string>
    <string name="to_do_update">수정된 TO-DO를\n저장하시겠습니까?</string>
    <string name="to_do_delete">현재 TO-DO를\n삭제하시겠습니까?</string>
    <string name="commit_approve">해당 커밋을\n승인하시겠습니까?</string>
    <string name="no_to_do_alarm">등록된 TO-DO가 없어요</string>
    <string name="comment">우리 2월까지 마무리 할 수 있겠지?</string>
    <string name="commit_github_url">https://github.com/%s/%s/commit/%s</string>
    <string name="commit_convention">ToDoCode 메세지</string>
    <string name="commit_convention_description">커밋할 때, 해당 To-Do의\nToDoCode를 커밋 메세지 맨 앞에 넣어주세요.\n띄어쓰기 한 칸은 필수!</string>
    <string name="commit_convention_ex">3Dck8A [BOJ]#1234:JAVA\n45jB9r [PROG]Lv2_34번:c++</string>
    <string name="commit_comment_recommand">아직 등록된 리뷰가 없어요</string>
    <string name="message_select_noti">%님에게 전달할\n메시지를 선택해주세요</string>
    <string name="message_make_noti">%님에게 대신 전달할게요</string>
    <string name="send_message">알림보내기</string>
    <string name="quit_study">탈퇴하기</string>
    <string name="study_comment_title">응원 한마디</string>
    <string name="study_comment_description">멤버들에게 응원의 한마디를 남겨보세요!</string>
    <string name="study_comment_recommand">첫번째 글을 작성해보세요 :)</string>
    <string name="study_comment_update">해당 글을\n수정하시겠습니까?</string>
    <string name="study_comment_delete">해당 글을\n삭제하시겠습니까?</string>
    <string name="study_approve_member_apply">해당 멤버의 등록을\n수락하시겠습니까?</string>
    <string name="study_withdraw_member_apply">해당 멤버의 등록을\n거절하시겠습니까?</string>
    <string name="study_quit_reason1">해야 할 TO-DO가 너무 많아요</string>
    <string name="study_quit_reason2">더 이상 스터디가 필요하지 않아요</string>
    <string name="study_quit_reason3">팀원들과 맞지 않아 불편해요</string>
    <string name="study_quit_alert_title">스터디를 탈퇴하시겠습니까?</string>
    <string name="study_quit_alert_detail">스터디 활동 기록은 남아있어요\n* 추후 재가입은 불가해요</string>
    <string name="study_end_alert_title">스터디를 종료하시겠습니까?</string>
    <string name="study_end_alert_detail">스터디의 모든 활동이 종료돼요\n(활동 기록은 볼 수 있어요)</string>
    <string name="study_delete_alert_title">스터디를 삭제하시겠습니까?</string>
    <string name="study_delete_alert_detail">스터디 및 스터디의 모든 활동 기록이 삭제돼요 </string>

    <!-- Strings related to rv_item -->
    <string name="study_score">%d점</string>
    <string name="study_to_do_check">/%d</string>
    <string name="study_member_rv">/%d명</string>
    <string name="study_total_day_cnt">D+%d</string>
    <string name="study_to_do_empty">마감 예정인 To-Do가 없어요!</string>
    <string name="study_to_do_commit_info">%s • %s •</string>


    <!-- Strings related to feed -->
    <string name="feed_cnt">전체스터디</string>
    <string name="feed_explanation">"야금야금, 하지만 확실하게"\n이 스터디는 코딩 테스트를 준비하시는 분들이 각자 알고리즘 문제를 풀고, 서로 학습한 내용을 공유하며 동기부여 형성을 하도록 하는 스터디입니다.</string>
    <string name="study_no_study">운영 중인 스터디가 없어요</string>
    <string name="feed_rule_week">주 1일 커밋 필수</string>
    <string name="feed_rule_everyday">매일 커밋 필수 </string>
    <string name="feed_rule_free">자율 커밋</string>
    <string name="feed_member_number">%d/%d 명</string>
    <string name="feed_member_full_number">%d명</string>
    <string name="feed_make_study_1">%s</string>
    <string name="feed_make_study_2">주 %d일 커밋/%s 마감/%d명</string>
    <string name="feed_apply_study">해당 스터디에\n가입하시겠습니까?</string>
    <string name="feed_apply_study_cancel">해당 스터디 가입을\n취소하시겠습니까?</string>
    <string name="feed_make_study_github_repo">생성할 깃허브 레포지토리 이름을 입력해주세요</string>
    <string name="feed_make_study_github_repo_desc">* 입력한 이름으로 회원님의 깃허브 계정에 레포지토리가 생성돼요</string>
    <string name="feed_make_study_category_desc">스터디와 관련된 태그를 선택해주세요</string>


    <!-- Strings related to login -->
    <string name="detail1_body">서비스 이용 약관 내용</string>
    <string name="detail2_body">개인정보 처리 방침 내용</string>
    <string name="detail3_body">본인 인증 서비스 이용 약관 내용</string>
    <string name="agreement">동의</string>


    <!-- Strings related to profile -->
    <string name="nickname">대머리깃터디</string>
    <string name="github_id">\@%s</string>
    <string name="profile_github_link">www.github.com</string>
    <string name="profile_blog_link">www.naver.com</string>
    <string name="profile_linkedin_link">www.linkedin.com</string>
    <string name="profile_no_commit_list">커밋 기록이 없어요</string>
    <string name="profile_no_saved_study">저장한 스터디가 없어요</string>
    <string name="profile_update_info">프로필을 수정하시겠습니까?</string>
    <string name="profile_setting_push_alert">알림을 켜서 스터디 소식을 빠르게 받아보세요!</string>
    <string name="profile_delete_account_reason1">사용을 잘 안하게 돼요</string>
    <string name="profile_delete_account_reason2">오류가 많아요</string>
    <string name="profile_delete_account_reason3">앱 이용이 불편해요</string>
    <string name="profile_delete_account_reason4">기타</string>
    <string name="profile_problem_solve_detail">이메일로 문제를 알려주세요\n빠르게 해결해드릴게요!</string>
    <string name="alert_logout_title">로그아웃을 하시겠습니까?</string>
    <string name="alert_logout_detail">로그아웃 시\n 참여 스터디 알림을 받지 못해요</string>
    <string name="alert_delete_account_title">회원 탈퇴를 하시겠습니까?</string>
    <string name="alert_delete_account_detail">현재 계정의 모든 데이터가 삭제돼요</string>
    <string name="alert_logout_cancel">닫기</string>
    <string name="alert_logout_confirm">로그아웃</string>
    <string name="alert_delete_account_confirm">탈퇴하기</string>

</resources>