<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingLeft="22dp"
    android:paddingRight="22dp"
    android:paddingBottom="30dp"
    tools:context=".ui.mystudy.StudyCommentBoardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/studyCommentBoardTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/B3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_comment_title"
            android:textColor="@color/BLACK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/B6_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/study_comment_description"
        android:textColor="@color/GS_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studyCommentBoardTitle" />

    <TextView
        android:id="@+id/isNoCommentLayout"
        style="@style/B3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/study_comment_recommand"
        android:textColor="@color/GS_400"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/commentSwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/newCommentBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studyCommentBoardTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/newCommentBox"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box_non_stroke_r8"
        android:backgroundTint="#F3F5F7"
        android:gravity="center_horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/newCommentBody"
                style="@style/B6_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="메세지 남기기"
                android:paddingBottom="10dp"
                android:textColor="@color/GS_900"
                android:textColorHint="@color/GS_500" />
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/postBtn"
        style="@style/B6_2"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:background="@drawable/selector_btn_r8_enable"
        android:enabled="false"
        android:text="@string/post"
        android:textColor="@drawable/selector_text_color_enable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>